--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -45,12 +45,12 @@
         android:id="@+id/verifyForgotPasswordBtn"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:layout_marginEnd="224dp"
         android:layout_marginStart="58dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="224dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/yellow_button_shape"
-        android:text="VERIFY"
+        android:text="SUBMIT"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
