--- a/app/src/main/res/drawable/inputfield_shape.xml
+++ b/app/src/main/res/drawable/inputfield_shape.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#d1d1d1"/>
+            <solid android:color="#b8b8b8"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
