MyAccount,PoliceHome,StudentHome updated

--- a/app/src/main/res/layout/activity_student_home.xml
+++ b/app/src/main/res/layout/activity_student_home.xml
@@ -45,7 +45,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/inputfield_shape"
         android:ems="10"
-        android:hint="addHintText"
+        android:hint="Enter address"
         android:inputType="text"
         android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="20sp"
@@ -96,7 +96,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/inputfield_shape"
         android:ems="10"
-        android:hint="@string/addHintText"
+        android:hint="Enter address"
         android:inputType="textPersonName"
         android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="20sp"
