--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:background="@drawable/yellow_button_shape"
-        android:onClick="goToStudentHomeActivity"
         android:text="Login"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +71,7 @@
         android:background="@drawable/inputfield_shape"
         android:ems="10"
         android:hint="Username"
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
