--- a/app/src/main/res/layout/activity_student_home.xml
+++ b/app/src/main/res/layout/activity_student_home.xml
@@ -9,40 +9,51 @@
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
-        android:layout_width="288dp"
-        android:layout_height="211dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="92dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="300dp"
+        android:layout_height="253dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.857" />
-
+        app:layout_constraintTop_toBottomOf="@+id/submitDestinationBtn" />
 
     <Button
-        android:id="@+id/Submit"
+        android:id="@+id/studentDirectionSubmitBtn"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/yellow_button_shape"
         android:onClick="goToStartTrackingActivity"
         android:text="Submit"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.957" />
+        app:layout_constraintTop_toBottomOf="@+id/mapView"
+        app:layout_constraintVertical_bias="0.204" />
+
+    <Button
+        android:id="@+id/submitDestinationBtn"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/yellow_button_shape"
+        android:onClick="goToStartTrackingActivity"
+        android:text="OK"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.816"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ToAddressInput" />
 
     <EditText
         android:id="@+id/FromAddressInput"
         android:layout_width="300dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="412dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="412dp"
         android:background="@drawable/inputfield_shape"
         android:ems="10"
         android:hint="Enter address"
@@ -54,39 +65,39 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/From"
-        app:layout_constraintVertical_bias="0.066" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/From"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="From:"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.107" />
+        app:layout_constraintTop_toBottomOf="@+id/MenuButton"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/To"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="To:"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.159"
+        app:layout_constraintHorizontal_bias="0.143"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.292" />
+        app:layout_constraintTop_toBottomOf="@+id/FromAddressInput"
+        app:layout_constraintVertical_bias="0.015" />
 
     <EditText
         android:id="@+id/ToAddressInput"
@@ -112,14 +123,18 @@
         style="@style/Widget.AppCompat.ImageButton"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="552dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="552dp"
         android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
         android:onClick="goToMyAccountActivity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.978"
+        app:layout_constraintStart_toEndOf="@+id/From"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.166"
         app:srcCompat="@drawable/ic_person_black_24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
