--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -141,7 +141,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/inputfield_shape"
                 android:ems="10"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:textColor="@android:color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -175,7 +175,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/inputfield_shape"
                 android:ems="10"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:textColor="@android:color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
